@@ -1,23 +1,21 @@
-FROM fair-gradle-cache-jdk25:latest AS builder
-
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle java-kora2-jdbc-repository:distTar --no-daemon
+#FROM fair-gradle-cache-jdk25:latest AS builder
+#
+#COPY --chown=gradle:gradle . /home/gradle/src
+#WORKDIR /home/gradle/src
+#RUN gradle java-kora2-jdbc-repository:distTar --no-daemon
 
 FROM eclipse-temurin:25-jre-jammy AS runner
 
 WORKDIR /app
 
-# Virtual Threads (????? JVM flag)
-# -Djdk.virtualThreadScheduler.parallelism=256
-ENV JAVA_OPTS="-XX:+UseParallelGC -XX:+UseNUMA -Djava.net.preferIPv4Stack=true -Djdk.trackAllThreads=false -XX:AutoBoxCacheMax=11000 -XX:InitialCodeCacheSize=256m -XX:ReservedCodeCacheSize=256m -XX:MaxInlineLevel=20 -XX:-StackTraceInThrowable -XX:+UseCompactObjectHeaders -XX:+UseCompressedClassPointers"
-
+ENV JAVA_OPTS="-XX:+UseParallelGC -XX:+UseNUMA -Djava.net.preferIPv4Stack=true -Djdk.trackAllThreads=false -XX:AutoBoxCacheMax=11000 -XX:InitialCodeCacheSize=64m -XX:ReservedCodeCacheSize=64m -XX:MaxInlineLevel=20"
 ENV POSTGRES_JDBC_URL="jdbc:postgresql://tfb-database:5432/hello_world"
 ENV POSTGRES_USER="benchmarkdbuser"
 ENV POSTGRES_PASS="benchmarkdbpass"
 ENV KORA_CONFIG_WATCHER_ENABLED="false"
 
-COPY --from=builder /home/gradle/src/java-kora2-jdbc-repository/build/distributions/application.tar /app/application.tar
+#COPY --from=builder /home/gradle/src/java-kora2-jdbc-repository/build/distributions/application.tar /app/application.tar
+COPY ./java-kora2-jdbc-repository/application.tar /app/application.tar
 RUN tar -xf /app/application.tar -C /app && rm /app/application.tar
 
 EXPOSE 8080
