@@ -8,7 +8,7 @@ FROM eclipse-temurin:25-jre-jammy AS runner
 
 WORKDIR /app
 
-ENV JAVA_OPTS="-XX:+UseParallelGC -XX:+UseNUMA -Djava.net.preferIPv4Stack=true -Djdk.trackAllThreads=false -XX:AutoBoxCacheMax=11000 -XX:InitialCodeCacheSize=256m -XX:ReservedCodeCacheSize=256m -XX:MaxInlineLevel=20 -XX:-StackTraceInThrowable -XX:+UseCompactObjectHeaders -XX:+UseCompressedClassPointers"
+ENV JAVA_OPTS="-XX:+UseParallelGC -XX:+UseNUMA -Djava.net.preferIPv4Stack=true -Djdk.trackAllThreads=false -XX:AutoBoxCacheMax=11000 -XX:InitialCodeCacheSize=64m -XX:ReservedCodeCacheSize=64m -XX:MaxInlineLevel=20"
 ENV POSTGRES_JDBC_URL="jdbc:postgresql://tfb-database:5432/hello_world"
 ENV POSTGRES_USER="benchmarkdbuser"
 ENV POSTGRES_PASS="benchmarkdbpass"
